<resources>
    <string name="app_name">Waiting Room</string>
    <string name="loginName">Name</string>
    <string name="loginPassword">Password</string>
    <string name="loginButton">Login</string>

    <!--    Business Detail Activity    -->
    <string name="updateLocation">Update Your Location</string>
    <string name="locationLabel">Location</string>
    <string name="businessUpdateButton">Update</string>

    <!--    Business Search Activity    -->
    <string name="search">Search</string>
    <string name="loginOrReg">Login / Register</string>
    <string name="placeholderTextSearch">Business Name / Phone #</string>

    <string name="callerList">Employee List</string>
    <string name="call">Call Selected</string>

    <!--    Call Request Activity   -->
    <string name="callRequest">Request Call</string>
    <string name="callReason">Reason for Call</string>
    <string name="callbackNum">Your Phone Number</string>
    <string name="name">Your Name</string>
    <string name="createCall">Request a call</string>
    <string name="invalidField">This field can\'t be as empty as your life is.</string>
    <string name="invalidNumber">Phone number is not acceptable. You are not acceptable.</string>
    <string name="position">Your Position in Line</string>

    <!--    Business Login Activity   -->
    <string name="businessLogin">Business Login</string>
    <string name="register">Register</string>

    <!--    Business List Activity    -->
    <string name="results">Results we found for: </string>

    <!--    Caller Detail Activity   -->
    <string name="requestTitle">Title: </string>
    <string name="requestDescription">Reason for Call: </string>
    <string name="callerNumber">Phone Number: </string>
    <string name="callerReason">Reason for Call: </string>
    <string name="callerName">Name: </string>
    <string name="callBtn">Call</string>

    <string name="createAccount">Create an Account</string>
    <string name="registerBusiness">Register a Business With Us!</string>
    <string name="businessName">Name of business</string>
    <string name="businessLocation">Business location</string>
    <string name="registerBtn">Register!</string>
    <string name="admin">Admin username</string>
    <string name="adminPass">Admin Password</string>
    <string name="adminPassConfirm">Confirm password</string>
    <string name="employeeManager">Manage Employees</string>
    <string name="viewCallQueue">View Caller Queue</string>
    <string name="newEmployee">Add New Employee</string>
    <string name="empName">Current Username:</string>
    <string name="changePass">New Password:</string>
    <string name="confirmPassword">Confirm Password:</string>
    <string name="update">Update Employee</string>
    <string name="delete">Delete Employee</string>
    <string name="logout">Logout</string>
</resources>